# dotfiles

./: .gitconfig  .gitignore  .ideavimrc  .secrets.sh  .tmux.conf.local  .tool-versions  .vimrc  .zshrc  BACKUP_SUMMARY.md  Brewfile  POST_INSTALL.md  README.md  asdf.sh  backup_before_migration.sh  create_links.sh  install.sh  install_arch.sh  install_generic.sh  install_mac.sh  install_ubuntu.sh  install_vim_debug_tools.sh  macos_preferences.sh  remote-tmux.conf  restore_backups.sh  restore_gpg_keys.sh  restore_ssh_keys.sh
.config/nvim/: init.vim
agent-view/: CLAUDE.md  README.md  pyproject.toml
agent-view/plugins/.claude-plugin/: marketplace.json
agent-view/plugins/claude/.claude-plugin/: plugin.json
agent-view/plugins/claude/hooks/: hooks.json
agent-view/plugins/codex/: notify.sh
agent-view/plugins/cursor/: hooks.json
agent-view/src/agent_view/: __init__.py  cli.py  discovery.py  fuzzy.py  installer.py  model.py  state.py  tmux.py
agent-view/src/agent_view/tui/: app.py
agent-view/tests/: test_cli.py  test_discovery.py  test_fuzzy.py  test_model.py  test_state.py
agent-view/tests/integration/: conftest.py  test_discovery_integration.py  test_hook_wiring.py  test_tui.py
bitso/: aws_auth.sh
lily58/: charles_keymap.json  flash.sh
nixos/: de.nix  display-switch-home.nix  display-switch.nix  flake.nix  home.nix  readme.md  warp.nix  zsh.nix
tmux/: tmux-sessionizer.sh
utilities/: audio-output-buds.desktop  audio-output-dac.desktop  audio-output-edifier.desktop  display.sh  restart-on-windows.sh  restart-windows.desktop  set-audio-output.sh
(+83 files in other folders)
