[project]
name = "agent-view"
version = "0.1.0"
description = "Exposé-style tmux TUI for Claude Code / Codex / Cursor agent panes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.86,<2",
]

[project.scripts]
agent-view = "agent_view.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_view"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that spawn a real tmux server",
]
